--- a/style.css
+++ b/style.css
@@ -214,3 +214,24 @@ body {
 .wishlist-btn.active {
     color: #ff4d4d; /* Красный цвет */
 }
+.filter-menu {
+    text-align: center;
+    margin: 30px 0;
+}
+
+.filter-btn {
+    background: none;
+    border: 1px solid #eee;
+    padding: 8px 20px;
+    margin: 0 5px;
+    cursor: pointer;
+    font-size: 12px;
+    text-transform: uppercase;
+    transition: 0.3s;
+}
+
+.filter-btn:hover, .filter-btn.active {
+    background-color: #000;
+    color: #fff;
+    border-color: #000;
+}
